# adventofcode2022

./: .gitignore  Cargo.toml
src/day1/: calorie_counting.rs
src/day2/: rock_paper_scissors.rs
src/day3/: rucksack_reorganization.rs
src/day4/: camp_cleanup.rs
src/day5/: supply_stacks.rs
