[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[[bin]]
name = "calorie_counting"
path = "src/day1/calorie_counting.rs"

[[bin]]
name = "rock_paper_scissors"
path = "src/day2/rock_paper_scissors.rs"


[[bin]]
name = "rucksack_reorganization"
path = "src/day3/rucksack_reorganization.rs"